--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Het Suthar</title>
+   
+</head>
+<body>
+    <h1>Het's Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr />
+    <h2><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h2>
+    <img height="200" src="./Screenshot 2024-01-31 215019.png"/>
+    <br>
+    <h2><a href="../3.4 Birthday Invite Project/index.html">Birthday Project</a></h2>
+    <img height="200" src="../4.3 HTML Porfolio Project/Screenshot 2024-01-31 215922.png"/>
+    <hr />
+    <h3>
+        <a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
+        <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact me</a>
+    </h3>
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
