--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img height="200" src="./Screenshot 2024-01-31 215019.png"/>
     <br>
     <h2><a href="../3.4 Birthday Invite Project/index.html">Birthday Project</a></h2>
-    <img height="200" src="../Screenshot 2024-01-31 215922.png"/>
+    <img height="200" src="./Screenshot 2024-01-31 215922.png"/>
     <hr />
     <h3>
         <a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
