--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Het's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <h2><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h2>
+    <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
     <img height="200" src="./Screenshot 2024-01-31 215019.png"/>
     <br>
-    <h2><a href="../3.4 Birthday Invite Project/index.html">Birthday Project</a></h2>
+    <h2><a href="./public/birthday-invite.html">Birthday Project</a></h2>
     <img height="200" src="./Screenshot 2024-01-31 215922.png"/>
     <hr />
     <h3>
