--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <img height="200" src="./Screenshot 2024-01-31 215922.png"/>
     <hr />
     <h3>
-        <a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
-        <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact me</a>
+        <a href="./public/about.html">About me</a>
+        <a href="./public/contact.html">Contact me</a>
     </h3>
 </body>
 </html>
